--- a/css/styles.css
+++ b/css/styles.css
@@ -8,30 +8,12 @@
 }
 
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden;
   overflow-y: auto;
   perspective: 1px;
-  transform-style: preserve-3d;
+  transform-style: preserve-3d; */
 }
-/* --------------------PARALLAX-SCROLLING----------------- */
-.parallax-wrapper {
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
-  transform-style: preserve-3d;
-}
-.parallax-wrapper::before {
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
-  transform: translateZ(-1px) scale(2);
-}
-.content {
-  margin: 0 auto;
-}
+
 #big-wrapper {
   position: relative;
 }
@@ -323,4 +305,55 @@ a:hover {
   .headline p {
     font-size: 14px;
   }
+}
+
+
+/* ----------------MODAL------------------- */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  position: relative;
+  text-align: center;
+}
+
+.modal-img {
+  width: 500px;
+}
+
+.modal-link {
+  color: rgb(37, 36, 94);
+  padding-top: 20px;
+  display: block;
+  font-size: 25px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
